# easy-mvp

./: .gitignore  Changelog.md  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: upload-to-pypi.yml
demo/presenter/: first_presenter.py  fourth_presenter.py  second_presenter.py  third_presenter.py
demo/view/: first_view.py  fourth_view.py  second_view.py
demo/view/ui/: first.ui  fourth.ui  second.ui  third.ui
easy_mvp/: abstract_presenter.py  application_manager.py  exception.py  intent.py  presenter_manager.py  window.py
src/: demo.py
src/demo/presenter/: first_presenter.py  fourth_presenter.py  second_presenter.py  third_presenter.py
src/demo/view/: second_view.py  third_view.py
src/demo/view/ui/: second.ui
src/easy_mvp/: abstract_presenter.py  application_manager.py  exception.py  intent.py  window.py
