
[metadata]
name = easy_mvp
version = 0.2.0
author = Rolando Rio Garaboa
author_email = rolandorio06@gmail.com
description = Construct MVP PyQt5 application easily
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/R0land013/easy-mvp

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    PyQt5>=5.15.6

packages = find:
package_dir =
    =src

[options.packages.find]
where = src
include = easy_mvp
exclude = demo